# swagger.json
@@ -8,6 +8,22 @@
     "host": "cse341pets.onrender.com",
     "basePath": "/",
     "schemes": ["https"],
+    "securityDefinitions": {
+    "GitHubOAuth": {
+      "type": "oauth2",
+      "flow": "accessCode",
+      "authorizationUrl": "https://github.com/login/oauth/authorize",
+      "tokenUrl": "https://github.com/login/oauth/access_token",
+      "scopes": {
+        "user": "Access user information"
+      }
+    }
+  },
+  "security": [
+    {
+      "GitHubOAuth": []
+    }
+  ],
     "paths": {
       "/auth/github": {
         "get": {
